# it-tools

./: .gitignore  MAC_APP_README.md  build-mac-app.sh  components.d.ts  drag-test.html  package-lock.json  package.json  simple-test.html  vite.config.ts  vite.config.ts.timestamp-1766642791413-9664278f75b16.mjs
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: main.rs  main_simple.rs
src/components/: DesktopControls.vue  ToolCard.vue
src/composable/: isTauri.ts  useTauri.ts
src/layouts/: base.layout.vue
